2006-12-01  Per Bothner  <per@bothner.com>

	* NodeUtils.java (collection): Replace old methods.
	(setSavedCollection, getSavedCollection): New static methods.
	(collectionResolverSymbol): New constant.
	(resolve): New method.
	(docCached, availableCached, collection): Use it.

2006-11-29  Per Bothner  <per@bothner.com>

	* NodeUtils.java (docAvailable): Moved from gnu.kawa.xml.Document.
	(docCached): Moved and renamed from Document/parseCahched.
	(docCached, docAvailable): Use StringUtils.coerceToString.

2006-11-28  Per Bothner  <per@bothner.com>

	* ArithOp.java (div(BigDecimal,BigDecimal)): New static method.
	(apply2): Use new div method.
	(apply2): Use BigDecimal division for Duration division.
	* TimeUtils.java (secondsBigDecimalFromDuration): New static method.
	(secondsFromDuration): Use secondsBigDecimalFromDuration.

2006-11-26  Per Bothner  <per@bothner.com>

	* NodeUtils.java (collection): New skeletal methods.

2006-11-25  Per Bothner  <per@bothner.com>

	* NodeUtils.java: Update StringValue -> TextUtils.
	* ArithOp.java: Likewise.
	* NumberValue.java: Likewise.
	* StringUtils.java: Likewise.
	* MinMax.java: Likewise.
	* TimeUtils.java: Likewise.
	* QNameUtils.java: Update XDataType -> TextUtils.

	* StringUtils.java (normalizeUnicode): New placeholder/dummy methods.

2006-11-24  Per Bothner  <per@bothner.com>

	* StringUtils.java (stringLength): Have to loop checking for surrogates.
	(substring, substring): Likewise must check for surrogates.
	(translate): Handle surrogates in all 3 arguments.
	(stringToCodepoints$X, appendCodepoint): Handle surrogates.

2006-11-23  Per Bothner  <per@bothner.com>

	* RelativeStep.java: Implement inlineable.
	(inline): Note that 2nd argument is inline-only.
	Do some optimizations/rewriting.
	(compile, getReturnType): New methods.
	(maybeSortNodes$X): Remove method.
	(extractStep): New static method.
	* RelativeStepFilter.java: Make class public.

2006-11-22  Per Bothner  <per@bothner.com>
